<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.shoujiedemo.bean.StatusBarHeightView
        app:use_type="use_height"
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color2">
        <!-- 关于标题 -->
        <LinearLayout
            android:id="@+id/myCenter_setting_about_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/myCenter_setting_about_return"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/left"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="20sp"
                android:textColor="@color/color3"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:background="@color/color5"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/login"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/stateNumber"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/producer"
                    android:textColor="@color/color4"/>
            </LinearLayout>
            <View
                android:background="@color/color5"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/groupLeader"
                    android:textColor="@color/color4"/>
            </LinearLayout>
            <View
                android:background="@color/color5"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:text="@string/groupMember"
                    android:textColor="@color/color4"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>