<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.shoujiedemo.bean.StatusBarHeightView
        app:use_type="use_height"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">
        <!-- 修改密码标题 -->
        <LinearLayout
            android:id="@+id/myCenter_setting_changePassword_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePassword_return"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/changePassword"
                android:textColor="@color/colorTitle"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#D6D6D6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/oldPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/changePassword_oldKey"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:hint="请输入旧密码"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/newPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/changePassword_newKey"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:hint="请输入新密码"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/repeatPassword"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/changePassword_repeatKey"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:hint="请重复新密码"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/changePassword_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:background="#1399CB"
            android:text="@string/enter"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>