<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.shoujiedemo.bean.StatusBarHeightView
        app:use_type="use_height"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dayLightBackground"
        android:orientation="vertical">
        <!-- 安全设置标题 -->
        <LinearLayout
            android:id="@+id/myCenter_setting_safe_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#fff"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/myCenter_setting_safe_return"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/left"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AccountAndSafe"
                android:textSize="20sp"
                android:textColor="@color/dayLightTitle"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <!-- 修改密码 -->
        <RelativeLayout
            android:id="@+id/myCenter_setting_safe_changePassword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:background="#fff"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/changePassword"
                android:textColor="@color/dayLightText"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <!-- 修改安全问题 -->
        <RelativeLayout
            android:id="@+id/myCenter_setting_safe_setSafeQuestion"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:background="#fff"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/setSafeQuestion"
                android:textColor="@color/dayLightText"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <!-- 设置邮箱 -->
        <RelativeLayout
            android:id="@+id/myCenter_setting_safe_setEmail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:background="#fff"
            android:clickable="true"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/setEmail"
                android:textColor="@color/dayLightText"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <!-- 注销账号 -->
        <RelativeLayout
            android:id="@+id/myCenter_setting_safe_destroyAccount"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:background="#fff"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/destroyAccount"
                android:textColor="@color/dayLightText"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>
        <View
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <!-- 警告内容 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="25dp"
            android:textSize="15sp"
            android:text="@string/destroyAccountWarning"/>

    </LinearLayout>
</LinearLayout>